# internal/model/facilities_model.go
@@ -2,7 +2,16 @@ package model
 
 import "time"
 
-type FacilityRequest struct {
+type CreateFacilityRequest struct {
+	EntityType  string `json:"entity_type" validate:"required,oneof=pura yayasan pasraman"`
+	Name        string `json:"name" validate:"required,min=1"`
+	Description string `json:"description"`
+	ImageURL    string `json:"image_url" validate:"required,url|uri|startswith=http"`
+	OrderIndex  int    `json:"order_index"`
+	IsActive    bool   `json:"is_active"`
+}
+
+type UpdateFacilityRequest struct {
 	Name        string `json:"name" validate:"required,min=1"`
 	Description string `json:"description"`
 	ImageURL    string `json:"image_url" validate:"required,url|uri|startswith=http"`
@@ -12,6 +21,7 @@ type FacilityRequest struct {
 
 type FacilityResponse struct {
 	ID          string    `json:"id"`
+	EntityType  string    `json:"entity_type"`
 	Name        string    `json:"name"`
 	Description string    `json:"description"`
 	ImageURL    string    `json:"image_url"`
